Added Images to start on image gallery

--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
         <h1>Total: $170.00</h1>
         <button class="cartBtn" type="submit">Go to Cart</button>
       </div>
+      <section class="banner">
+        <img class="bannerImage" src="images/banner8.jpg" alt="" />
+      </section>
     </main>
     <script src="js/index.js"></script>
   </body>
