--- a/index.html
+++ b/index.html
@@ -347,7 +347,44 @@
         <button class="cartBtn" type="submit">Go to Cart</button>
       </div>
       <section class="banner">
-        <img class="bannerImage" src="images/banner8.jpg" alt="" />
+        <div class="thumbnails"></div>
+        <div class="slides">
+          <div>
+            <img
+              class="bannerImage"
+              src="images/banner4.png"
+              alt="Picture of shoe"
+            />
+          </div>
+          <div>
+            <img
+              class="bannerImage"
+              src="images/banner8.jpg"
+              alt="Picture of shoe"
+            />
+          </div>
+          <div>
+            <img
+              class="bannerImage"
+              src="images/banner9.jpg"
+              alt="Picture of shoe"
+            />
+          </div>
+          <div>
+            <img
+              class="bannerImage"
+              src="images/banner11.jpg"
+              alt="Picture of shoe"
+            />
+          </div>
+          <div>
+            <img
+              class="bannerImage"
+              src="images/banner13.jpg"
+              alt="Picture of shoe"
+            />
+          </div>
+        </div>
       </section>
     </main>
     <script src="js/index.js"></script>
