--- a/index.html
+++ b/index.html
@@ -346,7 +346,9 @@
         <h1>Total: $170.00</h1>
         <button class="cartBtn" type="submit">Go to Cart</button>
       </div>
-      <section class="banner">
+      <section== class="banner">
+        <video src="video/AdobeStock_234251442_Video_HD_Preview.mov" autoplay muted loop></video>
+        <h1 class="bannerTitle">Discover <br> Somewhere <br> New</h1>
         <div class="thumbnails"></div>
         <div class="slides">
           <div>
