--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <button class="cartBtn" type="submit">Go to Cart</button>
       </div>
     </header>
-    <section class="banner">
+    <section id="banner" class="banner">
       <video
         src="video/AdobeStock_234251442_Video_HD_Preview.mov"
         autoplay
