--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <h3>$70.00</h3>
         </div>
         <div class="card">
-          <img src="images/shoe2.webp" alt="picture of hoodie" />
+          <img src="images/shoe2.webp" alt="picture of shoe" />
           <h1>TRX Vintage Shoes</h1>
           <h2>Size: 10.5</h2>
           <div class="itemCountContainer">
@@ -400,7 +400,13 @@
         </div>
       </div>
     </section>
-    <section><h1>To Be Continued ...</h1></section>
+    <section class="recent">
+      <h1>Recently Viewed Items</h1>
+      <div class="scrolling-wrapper">
+        <div class="recentCard shoe1"><h2>Duramo 10 Shoes</h2></div>
+        <div class="recentCard shoe2"><h2>TRX Vintage Shoes</h2></div>
+      </div>
+    </section>
     <script src="js/index.js"></script>
   </body>
 </html>
