--- a/index.html
+++ b/index.html
@@ -401,10 +401,28 @@
       </div>
     </section>
     <section class="recent">
-      <h1>Recently Viewed Items</h1>
+      <h1>Recently Viewed</h1>
       <div class="scrolling-wrapper">
-        <div class="recentCard shoe1"><h2>Duramo 10 Shoes</h2></div>
-        <div class="recentCard shoe2"><h2>TRX Vintage Shoes</h2></div>
+        <div class="recentCard shoe1">
+          <p>$70.00</p>
+          <span class="heart">&#10084;</span>
+          <h2>Duramo 10 Shoes</h2>
+        </div>
+        <div class="recentCard shoe2">
+          <p>$100.00</p>
+          <span class="heart">&#10084;</span>
+          <h2>TRX Vintage Shoes</h2>
+        </div>
+        <div class="recentCard shoe3">
+          <p>$150.00</p>
+          <span class="heart">&#10084;</span>
+          <h2>NMD_R1 Shoes</h2>
+        </div>
+        <div class="recentCard shoe4">
+          <p>$110.00</p>
+          <span class="heart">&#10084;</span>
+          <h2>Campus 80s Shoes</h2>
+        </div>
       </div>
     </section>
     <script src="js/index.js"></script>
