fixed a lot of thing

--- a/images/index.html
+++ b/images/index.html
@@ -773,32 +773,24 @@
       <section class="recent">
         <h1><i>Recently Viewed</i></h1>
         <div class="scrolling-wrapper">
-          <div>
-            <div class="recentCard shoe1">
-              <p>$70.00</p>
-              <span id="duramo" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard shoe1">
+            <p>$70.00</p>
+            <span id="duramo" class="heart">&#10084;</span>
             <h2>Duramo 10 Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard shoe2">
-              <p>$100.00</p>
-              <span id="TRX" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard shoe2">
+            <p>$100.00</p>
+            <span id="TRX" class="heart">&#10084;</span>
             <h2>TRX Vintage Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard shoe3">
-              <p>$150.00</p>
-              <span id="NMD" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard shoe3">
+            <p>$150.00</p>
+            <span id="NMD" class="heart">&#10084;</span>
             <h2>NMD_R1 Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard shoe4">
-              <p>$110.00</p>
-              <span id="campus" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard shoe4">
+            <p>$110.00</p>
+            <span id="campus" class="heart">&#10084;</span>
             <h2>Campus 80s Shoes</h2>
           </div>
         </div>
@@ -808,124 +800,92 @@
         <button class="menuBtn womenMenuBtn">Women</button>
         <button class="menuBtn kidsMenuBtn">Kids</button>
       </section>
-      <section class="tabs">
+      <section class="tabs" data-aos="fade-up">
         <div class="tabsHeading">
           <h1 id="newProduct">New & Trending</h1>
           <h1 id="memberProduct">Member's Only</h1>
         </div>
         <div id="newScroll" class="scrolling-wrapper">
-          <div>
-            <div class="recentCard new1">
-              <p>$65.00</p>
-              <span id="Samba" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new1">
+            <p>$65.00</p>
+            <span id="Samba" class="heart">&#10084;</span>
             <h2>Samba Vegan Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard new2">
-              <p>$65.00</p>
-              <span id="Mexico" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new2">
+            <p>$65.00</p>
+            <span id="Mexico" class="heart">&#10084;</span>
             <h2>Mexico Pre-Match Jersey</h2>
           </div>
-          <div>
-            <div class="recentCard new3">
-              <p>$190.00</p>
-              <span id="Ultraboost" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new3">
+            <p>$190.00</p>
+            <span id="Ultraboost" class="heart">&#10084;</span>
             <h2>Ultraboost 5.0 DNA Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard new4">
-              <p>$30.00</p>
-              <span id="World" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new4">
+            <p>$30.00</p>
+            <span id="World" class="heart">&#10084;</span>
             <h2>World Cup Mexico Tee</h2>
           </div>
-          <div>
-            <div class="recentCard new5">
-              <p>$150.00</p>
-              <span id="NMD2" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new5">
+            <p>$150.00</p>
+            <span id="NMD2" class="heart">&#10084;</span>
             <h2>NMD_R1 V2 Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard new6">
-              <p>$45.00</p>
-              <span id="Trefoil" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new6">
+            <p>$45.00</p>
+            <span id="Trefoil" class="heart">&#10084;</span>
             <h2>Trefoil Hoodie</h2>
           </div>
-          <div>
-            <div class="recentCard new7">
-              <p>$35.00</p>
-              <span id="Adicolor" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new7">
+            <p>$35.00</p>
+            <span id="Adicolor" class="heart">&#10084;</span>
             <h2>Adicolor Tights</h2>
           </div>
-          <div>
-            <div class="recentCard new8">
-              <p>$35.00</p>
-              <span id="Allover" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard new8">
+            <p>$35.00</p>
+            <span id="Allover" class="heart">&#10084;</span>
             <h2>Allover Print Pocket Tights</h2>
           </div>
         </div>
         <div id="memberScroll" class="scrolling-wrapper">
-          <div>
-            <div class="recentCard member1">
-              <p>$80.00</p>
-              <span id="Disney" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member1">
+            <p>$80.00</p>
+            <span id="Disney" class="heart">&#10084;</span>
             <h2>Disney Sport Hoodie</h2>
           </div>
-          <div>
-            <div class="recentCard member2">
-              <p>$210.00</p>
-              <span id="Ultraboost2" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member2">
+            <p>$210.00</p>
+            <span id="Ultraboost2" class="heart">&#10084;</span>
             <h2>Ultraboost Made Remade</h2>
           </div>
-          <div>
-            <div class="recentCard member3">
-              <p>$220.00</p>
-              <span id="Ultra" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member3">
+            <p>$220.00</p>
+            <span id="Ultra" class="heart">&#10084;</span>
             <h2>Ultra 4D Shoes</h2>
           </div>
-          <div>
-            <div class="recentCard member4">
-              <p>$50.00</p>
-              <span id="Big" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member4">
+            <p>$50.00</p>
+            <span id="Big" class="heart">&#10084;</span>
             <h2>Big Badge of Sport Tee</h2>
           </div>
-          <div>
-            <div class="recentCard member5">
-              <p>$60.00</p>
-              <span id="Running" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member5">
+            <p>$60.00</p>
+            <span id="Running" class="heart">&#10084;</span>
             <h2>Running Long Sleeve Tee</h2>
           </div>
-          <div>
-            <div class="recentCard member6">
-              <p>$55.00</p>
-              <span id="Terrex" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member6">
+            <p>$55.00</p>
+            <span id="Terrex" class="heart">&#10084;</span>
             <h2>Terrex Bucket Hat</h2>
           </div>
-          <div>
-            <div class="recentCard member7">
-              <p>$130.00</p>
-              <span id="Crewneck" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member7">
+            <p>$130.00</p>
+            <span id="Crewneck" class="heart">&#10084;</span>
             <h2>Crewneck Sweatshirt</h2>
           </div>
-          <div>
-            <div class="recentCard member8">
-              <p>$80.00</p>
-              <span id="Mock" class="heart">&#10084;</span>
-            </div>
+          <div class="recentCard member8">
+            <p>$80.00</p>
+            <span id="Mock" class="heart">&#10084;</span>
             <h2>Mock Long Sleeve Shirt</h2>
           </div>
         </div>
